Fixed so it'll compile on my desktop properly. TODO: .gitignore because ewwww, binary files.

--- a/bootloader/makefile
+++ b/bootloader/makefile
@@ -3,7 +3,7 @@ all: loader bootstraptest
 bootstraptest: loader
 	nasm bootstraptest.asm -o BFYTW.BIN
 	mkdir -p startmount
-	sudo mount -o users,loop start.img startmount
+	sudo mount -o loop start.img startmount
 	sudo cp BFYTW.BIN startmount
 	sleep 1
 	sudo umount startmount
