--- a/bootloader/stage2/makefile
+++ b/bootloader/stage2/makefile
@@ -9,13 +9,13 @@ HEADERS		:=	$(shell find $(SRCDIR) -maxdepth 1 -name '*.h')
 OBJECTS 	:=	$(subst src,$(BINDIR),$(SRCS:%.c=%.c.o)) $(subst src,$(BINDIR),$(ASMSRCS:%.asm=%.asm.o))
 
 CFLAGS		:=	-m32 -Wall -Wextra -Werror -nostdlib -fno-builtin -nostartfiles -nodefaultlibs --no-builtin -ffreestanding -fleading-underscore  -std=c99 -g
-LDFLAGS		:=	-T main.ld -ffreestanding -O2 -nostdlib -lgcc -g --oformat binary
+LDFLAGS		:=	-T stage2.ld -O2 -nostdlib -g --oformat binary
 ASMFLAGS	:=	-g
 INCLUDES	:=	$(addprefix -I,$(SRCDIR))
 
 AS 			:=	nasm
 CC			:=	i586-elf-gcc
-LD			:=	i586-elf-gcc
+LD			:=	i586-elf-ld
 
 vpath $(SRCDIR)
 
@@ -26,7 +26,7 @@ all: $(OBJECTS)
 
 $(BINDIR)/%.c.o: src/%.c $(BINMODS)
 	@echo "creating object $@..."
-	@$(CC) $(CFLAGS) $(LDFLAGS) $(INCLUDES) $(DEFS) -c $< -o $@
+	@$(CC) $(CFLAGS) $(INCLUDES) $(DEFS) -c $< -o $@
 
 $(BINDIR)/%.asm.o: src/%.asm $(BINMODS)
 	@echo "creating object $@..."
