--- a/system/makefile
+++ b/system/makefile
@@ -2,7 +2,7 @@ MODULES		:=	core drivers modules stdlib
 SRCDIR		:=	src $(addprefix src/,$(MODULES))
 BINDIR		:=	bin
 BINMODS		:=	$(addprefix bin/,$(MODULES))
-TARGET		:=	$(BINDIR)/BFYTW.BIN
+TARGET		:=	$(BINDIR)/system.bin
 SRCS		:=	$(shell find $(SRCDIR) -maxdepth 1 -name '*.c')
 ASMSRCS		:=	$(shell find $(SRCDIR) -maxdepth 1 -name '*.asm')
 HEADERS		:=	$(shell find $(SRCDIR) -maxdepth 1 -name '*.h')
