Updated the makefiles to allow for a proper top-level make install. Added printing to the stage2 bootloader for debugging and fixed some bugs in stage1 and stage2. Currently having problems with reading a file within stage2.

--- a/bootloader/stage1/makefile
+++ b/bootloader/stage1/makefile
@@ -5,7 +5,7 @@ TARGET		:=	$(BINDIR)/stage1.bin
 
 AS 			:=	nasm
 
-all: $(BINDIR)/loader.bin
+all: $(TARGET)
 
 bootstraptest: $(BINDIR)/loader.bin $(BINDIR)/bootstraptest.bin
 
@@ -13,12 +13,9 @@ $(BINDIR)/bootstraptest.bin: $(SRCDIR)/bootstraptest.asm
 	@mkdir -p $(BINDIR)
 	$(AS) $< -o $@
 
-$(BINDIR)/loader.bin: $(SRCDIR)/loader.asm
+$(BINDIR)/stage1.bin: $(SRCDIR)/loader.asm
 	@mkdir -p $(BINDIR)
 	$(AS) $< -o $@
 
 clean:
-	rm -f BFYTW.BIN
-	rm -f loader.bin
-	rm -f start.img
-	rm -f start.vdi
+	rm -f $(TARGET)
