--- a/bootloader/makefile
+++ b/bootloader/makefile
@@ -16,18 +16,11 @@ bootstraptest: loader
 	sleep 1
 	sudo umount startmount
 
-loader:
-	nasm loader.asm -o loader.bin
-	dd if=/dev/zero of=start.img bs=512 count=2048
-	dd if=loader.bin of=start.img bs=512 conv=notrunc
-
 vdi: loader
 	rm -f start.vdi
 	VBoxManage convertfromraw -format VDI start.img start.vdi
 
 
 clean:
-	rm -f BFYTW.BIN
-	rm -f loader.bin
-	rm -f start.img
-	rm -f start.vdi
+	make -C stage1 clean
+	make -C stage2 clean
