Fixed some run issues. Now, for some reason, after loading the kernel we jump to 0x1000 before the entry point.

--- a/bootloader/stage2/makefile
+++ b/bootloader/stage2/makefile
@@ -8,7 +8,7 @@ ASMSRCS		:=	$(shell find $(SRCDIR) -maxdepth 1 -name '*.asm')
 HEADERS		:=	$(shell find $(SRCDIR) -maxdepth 1 -name '*.h')
 OBJECTS 	:=	$(subst src,$(BINDIR),$(ASMSRCS:%.asm=%.asm.o)) $(subst src,$(BINDIR),$(SRCS:%.c=%.c.o))
 
-CFLAGS		:=	-m32 -Wall -Wextra -Werror -nostdlib -fno-builtin -nostartfiles -nodefaultlibs --no-builtin -ffreestanding -fleading-underscore  -std=c99 -g
+CFLAGS		:=	-gsplit-dwarf -m32 -Wall -Wextra -Werror -nostdlib -fno-builtin -nostartfiles -nodefaultlibs --no-builtin -ffreestanding -fleading-underscore  -std=c99
 LDFLAGS		:=	-T stage2.ld -O2 -nostdlib -Map stage2.map -g --oformat binary
 ASMFLAGS	:=	-g -felf
 INCLUDES	:=	$(addprefix -I,$(SRCDIR))
@@ -19,7 +19,7 @@ LD			:=	i586-elf-ld
 
 vpath $(SRCDIR)
 
-all: $(OBJECTS)
+all: $(OBJECTS) makefile
 	@echo "linking $(TARGET)..."
 	@$(LD) $(OBJECTS) -o $(TARGET) $(LDFLAGS)
 	@echo "linking complete"
